--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,25 @@ spring.thymeleaf.cache: false
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 endpoints.shutdown.enabled=true
-
+server.port: 3221
 uploaderName=upName
 uploaderPass=upPass
 
 deployerName=depName
 deployerPass=depPass
-
+apiKey=
+apiHost=realstonks.p.rapidapi.com
 spring.servlet.multipart.enabled=true
 spring.http.multipart.max-file-size=100MB
 spring.http.multipart.max-request-size=100MB
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/testDatabase
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.show-sql=true
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
